Fix overflowing message bug

--- a/src/components/inbox/ChatList.css
+++ b/src/components/inbox/ChatList.css
@@ -36,3 +36,7 @@
 	display: grid;
 	place-items: center;
 }
+
+.add-chat-btn:active {
+	filter: brightness(50%);
+}
